# coins

./: .gitignore  README.md  pyproject.toml
coins/: db.py  env.py
solcoins/: api.py  bot.py  cogs.py  db.py  env.py  main.py
